==> loboris/MicroPython_ESP32_psRAM_LoBo/MicroPython_BUILD/components/micropython/esp32/machine_timer.c <==
#include <stdint.h>
#include <stdio.h>
#include "driver/timer.h"
#include "py/runtime.h"
#include "modmachine.h"
#define TIMER_INTR_SEL		TIMER_INTR_LEVEL
#define TIMER_DIVIDER_KHZ	40000	// 500 us per tick, 1 kHz
#define TIMER_DIVIDER_MHZ	80		// 1 us per tick, 1 MHz
#define TIMER_SCALE_KHZ		2
#define TIMER_SCALE_MHZ		100
#define TIMER_RUNNING	1
#define TIMER_PAUSED	0
#define TIMER_TYPE_ONESHOT	0
#define TIMER_TYPE_PERIODIC	1
#define TIMER_TYPE_CHRONO	2
#define TIMER_TYPE_EXTBASE	3
#define TIMER_TYPE_EXT		4
#define TIMER_TYPE_MAX		5
#define TIMER_EXT_NUM		8
#define TIMER_FLAGS			0

STATIC void machine_timer_print(const mp_print_t *print, mp_obj_t self_in, mp_print_kind_t kind)
{
    machine_timer_obj_t *self = self_in;

    mp_printf(print, "Timer(%d) ", self->id);

    if (self->type >= TIMER_TYPE_MAX) {
        mp_printf(print, "Not initialized");
        return;
    }

    char stype[16];
    if (self->type == TIMER_TYPE_PERIODIC) sprintf(stype, "Periodic");
    else if (self->type == TIMER_TYPE_ONESHOT) sprintf(stype, "One shot");
    else if (self->type == TIMER_TYPE_CHRONO) sprintf(stype, "Chrono");
    else if (self->type == TIMER_TYPE_EXTBASE) sprintf(stype, "Extended base");
    else if (self->type == TIMER_TYPE_EXT) sprintf(stype, "Extended");
    else sprintf(stype, "Unknown");

    if (self->type == TIMER_TYPE_CHRONO) {
    	mp_printf(print, "Period: 1 us; ");
    }
    else if (self->type == TIMER_TYPE_EXT) {
    	mp_printf(print, "Period: %d ms; ", self->period);
    }
    else {
    	mp_printf(print, "Period: %d ms; ", self->period / 2);
    }
    if (self->type != TIMER_TYPE_CHRONO) {
    	mp_printf(print, "Repeat: %s; ", (self->repeat ? "True" : "False"));
    }
    mp_printf(print, "Type: %s; ", stype);
    mp_printf(print, "Running: %s\n", (self->state == TIMER_RUNNING) ? "yes" : "no");
    if ((self->type != TIMER_TYPE_CHRONO) && (self->type != TIMER_TYPE_EXTBASE)) {
        mp_printf(print, "         Events: %lu", self->event_num);
        mp_printf(print, "; Callbacks: %lu; ", self->cb_num);
    	mp_printf(print, "Missed: %lu", self->event_num - self->cb_num);
    }
    if (self->debug_pin >= 0) {
        mp_printf(print, "\n         Debug output on gpio %d, ", self->debug_pin);
    }
    if (self->type == TIMER_TYPE_EXTBASE) {
        machine_timer_obj_t *extmr;
        mp_printf(print, "  Handled extended timers:\n");
		for (int i=0; i < TIMER_EXT_NUM; i++) {
			extmr = ext_timers[i];
			if (extmr) {
				mp_printf(print, "    %2d: Period: %d ms, %s", i+4, extmr->period, (extmr->state == TIMER_RUNNING) ? "Running" : "Paused");
			}
		}
    }

}

STATIC void machine_timer_disable(machine_timer_obj_t *self)
{
    if ((self->id < 4) && (self->handle)) {
        timer_pause((self->id >> 1) & 1, self->id & 1);
        if (self->type != TIMER_TYPE_CHRONO) esp_intr_free(self->handle);
        mpy_timers_used[self->id] = NULL;
    }
    else ext_timers[(self->id-4)] = NULL;
    self->callback = NULL;
    self->handle = NULL;
    self->event_num = 0;
    self->cb_num = 0;
    self->debug_pin = -1;
	self->state = TIMER_PAUSED;
	self->type = TIMER_TYPE_MAX;
}

STATIC void machine_timer_isr(void *self_in)
{
    machine_timer_obj_t *self = (machine_timer_obj_t *)self_in;

    if (self->id & 2) {
    	if (self->id & 1) TIMERG1.int_clr_timers.t1 = 1;
    	else TIMERG1.int_clr_timers.t0 = 1;
    	TIMERG1.hw_timer[self->id & 1].config.alarm_en = self->repeat;
    }
    else {
    	if (self->id & 1) TIMERG0.int_clr_timers.t1 = 1;
    	else TIMERG0.int_clr_timers.t0 = 1;
    	TIMERG0.hw_timer[self->id & 1].config.alarm_en = self->repeat;
    }

    if (self->debug_pin >= 0) {
    	if (self->debug_pin_mode >= 0) gpio_set_level(self->debug_pin, (self->debug_pin_mode & 1));
    	else gpio_set_level(self->debug_pin, (self->event_num & 1));
    }
    self->event_num++;

    if ((self->callback) && (mp_sched_schedule(self->callback, self, NULL))) self->cb_num++;
}

STATIC void machine_timer_enable(machine_timer_obj_t *self)
{
	if (self->id >= 4) {
		ext_timers[(self->id-4)] = self;
		return;
	}

	timer_config_t config;
    config.counter_dir = TIMER_COUNT_UP;
    config.intr_type = TIMER_INTR_LEVEL;
    config.counter_en = TIMER_PAUSE;

    if (self->type == TIMER_TYPE_CHRONO) {
        config.alarm_en = TIMER_ALARM_DIS;
        config.auto_reload = TIMER_AUTORELOAD_DIS;
    	config.divider = TIMER_DIVIDER_MHZ;
    }
    else {
        config.alarm_en = TIMER_ALARM_EN;
        config.auto_reload = self->repeat;
    	config.divider = TIMER_DIVIDER_KHZ;
    }

    check_esp_err(timer_init((self->id >> 1) & 1, self->id & 1, &config));

    // Timer's counter will initially start from value below.
    // Also, if auto_reload is set, this value will be automatically reload on alarm

    check_esp_err(timer_set_counter_value((self->id >> 1) & 1, self->id & 1, 0x00000000ULL));

    if (self->type != TIMER_TYPE_CHRONO) {
		// Configure the alarm value and the interrupt on alarm.
		check_esp_err(timer_set_alarm_value((self->id >> 1) & 1, self->id & 1, self->period));
		// Enable timer interrupt
		check_esp_err(timer_enable_intr((self->id >> 1) & 1, self->id & 1));
		// Register interrupt callback
		if (self->type == TIMER_TYPE_EXTBASE) {
			check_esp_err(timer_isr_register((self->id >> 1) & 1, self->id & 1, machine_ext_timer_isr, (void*)self, TIMER_FLAGS, &self->handle));
		}
		else {
			check_esp_err(timer_isr_register((self->id >> 1) & 1, self->id & 1, machine_timer_isr, (void*)self, TIMER_FLAGS, &self->handle));
		}
    	check_esp_err(timer_start((self->id >> 1) & 1, self->id & 1));
    }
    mpy_timers_used[self->id] = self;
}

STATIC mp_obj_t machine_timer_init_helper(machine_timer_obj_t *self, mp_uint_t n_args, const mp_obj_t *pos_args, mp_map_t *kw_args)
{
    static const mp_arg_t allowed_args[] = {
        { MP_QSTR_period,       MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = 10} },
        { MP_QSTR_mode,         MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = TIMER_TYPE_PERIODIC} },
        { MP_QSTR_callback,     MP_ARG_KW_ONLY | MP_ARG_OBJ, {.u_obj = mp_const_none} },
        { MP_QSTR_dbgpin,       MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = -1} },
        { MP_QSTR_dbgpinmode,   MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = -1} },
    };

    machine_timer_disable(self);

    mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all(n_args, pos_args, kw_args, MP_ARRAY_SIZE(allowed_args), allowed_args, args);

    self->handle = NULL;
    self->event_num = 0;
    self->cb_num = 0;
    self->debug_pin = -1;

    if (self->id < 4) {
    	// Base hardware timer
		self->type = args[1].u_int & 3;

		if (self->type == TIMER_TYPE_EXTBASE) {
			if (self->id != 0) {
				mp_raise_ValueError("Only timer 0 can be used as extended timer.");
			}
			// Extended base timer types use an 2 kHz clock
			// set the period to 1 ms, repeat mode, no callback
			self->period = 2;
			self->repeat = 1;
			self->callback = NULL;
		}
		else if (self->type == TIMER_TYPE_CHRONO) {
			// Chrono Timer uses an 1 MHz clock, no callback
			// set period in us
			self->period = 1;
			self->repeat = 0;
			self->callback = NULL;
		}
		else {
			// Other timer types use an 2 kHz clock, convert period to ms.
			if (args[0].u_int < 1) self->period = 2;
			else self->period = args[0].u_int * 2;
			self->repeat = args[1].u_int & 1;
			if (args[2].u_obj != mp_const_none) self->callback = args[2].u_obj;
			// set the debug gpio if used
			if ((args[3].u_int >= 0) && (args[3].u_int < 34)) {
				self->debug_pin = args[3].u_int;
				self->debug_pin_mode = args[4].u_int;
				gpio_pad_select_gpio(self->debug_pin);
				gpio_set_direction(self->debug_pin, GPIO_MODE_OUTPUT);
				gpio_set_level(self->debug_pin, 0);
			}
		}
		// enable and start the timer
		machine_timer_enable(self);

		if (self->type != TIMER_TYPE_CHRONO) self->state = TIMER_RUNNING;
		else self->state = TIMER_PAUSED;
    }
    else {
    	// Extended timer
    	uint8_t mode = args[1].u_int & 3;
    	if ((mode != TIMER_TYPE_PERIODIC) && (mode != TIMER_TYPE_ONESHOT)) {
			mp_raise_ValueError("Wrong mode for extended timer.");
    	}
    	self->type = TIMER_TYPE_EXT;
		if (args[0].u_int < 1) self->period = 1;
		else self->period = args[0].u_int;
		self->repeat = args[1].u_int & 1;
		if (args[2].u_obj != mp_const_none) self->callback = args[2].u_obj;
		self->counter = 0x00000000ULL;
		self->alarm = self->period;
		self->state = TIMER_RUNNING;

		machine_timer_enable(self);
    }

    return mp_const_none;
}

STATIC mp_obj_t machine_timer_start(mp_obj_t self_in)
{
    machine_timer_obj_t *self = self_in;

    if (self->type == TIMER_TYPE_CHRONO) {
        if (self->state == TIMER_RUNNING) {
		    check_esp_err(timer_pause((self->id >> 1) & 1, self->id & 1));
        }
        self->event_num = 0;
		check_esp_err(timer_set_counter_value((self->id >> 1) & 1, self->id & 1, 0x00000000ULL));
		check_esp_err(timer_start((self->id >> 1) & 1, self->id & 1));
		self->state = TIMER_RUNNING;
	}
	return mp_const_none;
}

STATIC mp_obj_t machine_timer_period(size_t n_args, const mp_obj_t *args)
{
    machine_timer_obj_t *self = args[0];
    uint32_t period = 1;

    if (n_args > 1) {
		if (self->type == TIMER_TYPE_EXTBASE) return MP_OBJ_NEW_SMALL_INT(1);

		uint8_t old_state = self->state;
		// Pause timer
		if (self->id < 4) {
			// Base hardware timer
			if (self->state == TIMER_RUNNING) {
				check_esp_err(timer_pause((self->id >> 1) & 1, self->id & 1));
			}
		}
		self->state = TIMER_PAUSED;

		// Set new period
		period = mp_obj_get_int(args[1]);
		if (self->type == TIMER_TYPE_CHRONO) {
			if (period < 10) period = 1;
			else period /= 10;
		}
		else if (self->type == TIMER_TYPE_EXT) {
			if (period < 1) period = 1;
			self->counter = 0x00000000ULL;
			self->alarm = period;
		}
		else {
			if (period < 1) period = 2;
			else period *= 2;
		}
		self->period = period;
		if (self->id < 4) {
			check_esp_err(timer_set_counter_value((self->id >> 1) & 1, self->id & 1, 0x00000000ULL));
			check_esp_err(timer_set_alarm_value((self->id >> 1) & 1, self->id & 1, self->period));
		}

		if ((self->id < 4) && (old_state == TIMER_RUNNING)){
			// Base hardware timer
			check_esp_err(timer_start((self->id >> 1) & 1, self->id & 1));
		}
		self->state = old_state;
    }

    if (self->type == TIMER_TYPE_CHRONO) period = self->period * 10;
    else if (self->type == TIMER_TYPE_EXT) period = self->period;
    else period = self->period / 2;

    return MP_OBJ_NEW_SMALL_INT(period);
}
