==> sipeed/MaixPy-v1/ports/k210-standalone/mpy-mod/machine/machine_timer.c <==
#include <stdint.h>
#include <stdio.h>
#include "timer.h"
#include "py/obj.h"
#include "py/gc.h"
#include "py/runtime.h"
#include "modmachine.h"
#include "mphalport.h"
#include "plic.h"
#include "sysctl.h"
#include "py/objtype.h"
#define TIMER_INTR_SEL TIMER_INTR_LEVEL
#define TIMER_DIVIDER  8
#define TIMER_SCALE    (TIMER_BASE_CLK / TIMER_DIVIDER)
#define TIMER_FLAGS    0
#define K210_DEBUG 0
#define debug_print(x,arg...) printf("[MAIXPY]"x,##arg)
#define debug_print(x,arg...)

STATIC void machine_timer_print(const mp_print_t *print, mp_obj_t self_in, mp_print_kind_t kind) {
    machine_timer_obj_t *self = self_in;

    mp_printf(print, "[MAIXPY]TIMER:Timer(%p) ", self);

    mp_printf(print, "[MAIXPY]TIMER:timer freq=%d, ", self->freq);
    mp_printf(print, "[MAIXPY]TIMER:reload=%d, ", timer_get_reload(self->timer,self->channel));
    mp_printf(print, "[MAIXPY]TIMER:counter=%d", timer_get_count(self->timer,self->channel));
}

STATIC void machine_timer_disable(machine_timer_obj_t *self) {
	timer_disable(self->timer, self->channel);
	plic_irq_disable(IRQN_TIMER0A_INTERRUPT + self->timer);
	plic_irq_deregister(IRQN_TIMER0A_INTERRUPT + self->timer);
	self->active = 0;
}

STATIC int machine_timer_isr(void *self_in) {
	int ret = 0;
	mp_obj_t member[2] = {MP_OBJ_NULL, MP_OBJ_NULL};
    machine_timer_obj_t *self = self_in;
	debug_print("[MAIXPY]TIMER:freq = %d\n",self->freq);
	debug_print("[MAIXPY]TIMER:enter machine_timer_isr\n");
	timer_channel_clear_interrupt(self->timer,self->channel);	
	debug_print("[MAIXPY]TIMER:self->callback = %p\n",self->callback);
	mp_obj_type_t *type = mp_obj_get_type(self->callback);
	debug_print("[MAIXPY]TIMER:type->call = %p\n",type->call);
	if(type != NULL)
	{
		debug_print("[MAIXPY]TIMER:type != NULL\n");
		mp_call_function_1(self->callback,MP_OBJ_FROM_PTR(self));
	}
	else
	{
		debug_print("[MAIXPY]TIMER:type == NULL\n");
		
	}
	debug_print("[MAIXPY]TIMER:quit machine_timer_isr\n");
	return 1;
}

STATIC void machine_timer_enable(machine_timer_obj_t *self) {
	debug_print("[MAIXPY]TIMER:self->timer=%d,self->channel=%d\n",self->timer,self->channel);
	if(self->channel == 0 || 1 == self->channel)
	{
		debug_print("[MAIXPY]TIMER:start init plic timer channel 0 and 1\n");
		plic_set_priority(IRQN_TIMER0A_INTERRUPT + self->timer*2, 1);
		plic_irq_enable(IRQN_TIMER0A_INTERRUPT + self->timer*2);
		plic_irq_register(IRQN_TIMER0A_INTERRUPT + self->timer*2, machine_timer_isr, (void*)self);
	}
	else if(self->channel == 2 || 3 == self->channel)
	{
		debug_print("[MAIXPY]TIMER:start init plic timer channel 2 and 3\n");
		plic_set_priority(IRQN_TIMER0B_INTERRUPT + self->timer*2, 1);
		plic_irq_enable(IRQN_TIMER0B_INTERRUPT + self->timer*2);
		plic_irq_register(IRQN_TIMER0B_INTERRUPT + self->timer*2, machine_timer_isr, (void*)self);
	}
	//timer_set_mode(self->timer, self->channel, TIMER_CR_USER_MODE);
	timer_set_reload(self->timer, self->channel, self->period);
	timer_enable_interrupt(self->timer, self->channel);
	timer_set_enable(self->timer, self->channel,1);
	self->active = 0;
	debug_print("[MAIXPY]TIMER:quit %s\n",__FUNCTION__);
}

STATIC mp_obj_t machine_timer_init_helper(machine_timer_obj_t *self, mp_uint_t n_args, const mp_obj_t *pos_args, mp_map_t *kw_args) {
    enum {
		ARG_freq,
		ARG_period,
		ARG_div,
        ARG_callback,
        //ARG_tick_hz,
        //ARG_mode,
    };
    static const mp_arg_t allowed_args[] = {
/*
#if MICROPY_PY_BUILTINS_FLOAT
		{ MP_QSTR_freq, 		MP_ARG_KW_ONLY | MP_ARG_OBJ, {.u_obj = mp_const_none} },
#else
#endif
*/
		{ MP_QSTR_freq, 		 MP_ARG_INT, {.u_int = 0} },
        { MP_QSTR_period,        MP_ARG_INT, {.u_int = 0} },
        { MP_QSTR_div,       	 MP_ARG_INT, {.u_int = 0} },
        { MP_QSTR_callback,      MP_ARG_OBJ, {.u_obj = mp_const_none} },
        //{ MP_QSTR_tick_hz,      MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = 1000} },
        //{ MP_QSTR_mode,         MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = 1} },

    };

    //machine_timer_disable(self);self->clk_freq
    mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all(n_args, pos_args, kw_args, MP_ARRAY_SIZE(allowed_args), allowed_args, args);
	self->clk_freq = sysctl_clock_get_freq(SYSCTL_CLOCK_TIMER0 + self->timer);
/*
#if MICROPY_PY_BUILTINS_FLOAT
    if (args[ARG_freq].u_obj != mp_const_none) {
        self->period = (uint32_t)(clk_freq / mp_obj_get_float(args[ARG_freq].u_obj));
    }
#else
#endif
*/
	/*timer prescale*/
	if(args[ARG_div].u_int == 0)
	{
		self->div = 1;
	}
	if(args[ARG_div].u_int - 1 > 0)
	{
		self->div = args[ARG_div].u_int;
		timer_set_clock_div(self->timer,self->div-1);
		
	}
	else
	{
		printf("[MAIXPY]TIMER:div must be bigger than 1,use default division parameter\n");
		self->div = 1;
	}
	
	/*set frequency,Frequency takes precedence over period*/
    if (args[ARG_freq].u_int > 0) 
	{
		self->freq = (uint32_t)args[ARG_freq].u_int;
		self->clk_freq = sysctl_clock_get_freq(SYSCTL_CLOCK_TIMER0 + self->timer);
		self->period = (uint32_t)(self->clk_freq / (uint32_t)args[ARG_freq].u_int);
    }
	else if(args[ARG_freq].u_int < 0)
	{
		printf("[MAIXPY]TIMER:frequency must be bigger than 1,use default frequency parameter\n");
		self->freq = 1;
		self->clk_freq = sysctl_clock_get_freq(SYSCTL_CLOCK_TIMER0 + self->timer);
		self->period = (uint32_t)(self->clk_freq / (uint32_t)args[ARG_freq].u_int);
	}
	else if(args[ARG_freq].u_int == 0)
	{
		if(args[ARG_period].u_int > 0)
		{
			self->period = args[ARG_period].u_int;
		}
		else
		{
			/*no set freq && no set period*/
			printf("[MAIXPY]TIMER:please set freq  or period correctly\n");
			printf("[MAIXPY]TIMER:freq > 0  and  period > 0\n");
			return mp_const_false;
		}
	}
	
    //self->repeat = args[ARG_mode].u_int;	
	if (mp_obj_is_callable(args[ARG_callback].u_obj))
	{
		self->callback = args[ARG_callback].u_obj;
		debug_print("[MAIXPY]TIMER:callback is normal\n");
	}
    else
    {
    	printf("[MAIXPY]TIMER:callback can't work,please give me a callback function\n");
		return mp_const_false;
    }
	printf("[MAIXPY]TIMER:clk_freq = %d,self->period = %d\n",self->clk_freq,self->period);
	timer_init(self->timer);
    machine_timer_enable(self);
	self->clk_freq = sysctl_clock_get_freq(SYSCTL_CLOCK_TIMER0 + self->timer);
    return mp_const_none;
}

STATIC mp_obj_t machine_timer_period(mp_obj_t self_in,mp_obj_t period) {
    machine_timer_obj_t *self = self_in;
    mp_uint_t result = 0;
	if (MP_OBJ_IS_SMALL_INT((period))) 
		self->period = MP_OBJ_SMALL_INT_VALUE(period);
	else
	{
		printf("[MAIXPY]TIMER:type error\n");
		return mp_const_none;
	}
	result = self->period;
	timer_disable(self->timer, self->channel);
	timer_set_reload(self->timer, self->channel, self->period);
	timer_set_enable(self->timer, self->channel,1);
    return MP_OBJ_NEW_SMALL_INT((mp_uint_t)(result * 1000));  // value in ms
}

STATIC mp_obj_t machine_timer_start(mp_obj_t self_in) {
    machine_timer_obj_t *self = self_in;
	if(self->active == 0)
		timer_set_enable(self->timer, self->channel,1);
	self->active = 1;
    return mp_const_none;  // value in ms
}
